Fix forwarding album by forward arrow Prevent keyboard closening on clicking @via Hide message input scrollbar Fix flickering media border in inline helper Hide checkbox ripple in popups Hide urls underline in reply markup buttons

--- a/src/scss/partials/_chatBubble.scss
+++ b/src/scss/partials/_chatBubble.scss
@@ -2276,6 +2276,10 @@ $bubble-margin: .25rem;
     //line-height: var(--line-height);
     background: var(--message-highlightning-color);
 
+    &.anchor-url {
+      text-decoration: none !important;
+    }
+
     &:after {
       content: " ";
       display: block;
